最后一次UI修复了。

--- a/web/viz.html
+++ b/web/viz.html
@@ -148,12 +148,13 @@
 		          <div class="drawer-body model-body">
 			            <div class="model-layout">
 			              <aside class="model-nav" aria-label="模型设置导航">
-		                <button class="model-nav-btn active" type="button" data-target="model-section-check">检测结果</button>
-		                <button class="model-nav-btn" type="button" data-target="model-section-mode">模式</button>
-		                <button class="model-nav-btn" type="button" data-target="model-section-llm">LLM</button>
-		                <button class="model-nav-btn" type="button" data-target="model-section-asr">ASR</button>
-		                <button class="model-nav-btn" type="button" data-target="model-section-env">环境摘要</button>
-		              </aside>
+			                <button class="model-nav-btn active" type="button" data-target="__all__">全部</button>
+			                <button class="model-nav-btn" type="button" data-target="model-section-check">检测结果</button>
+			                <button class="model-nav-btn" type="button" data-target="model-section-mode">模式</button>
+			                <button class="model-nav-btn" type="button" data-target="model-section-llm">LLM</button>
+			                <button class="model-nav-btn" type="button" data-target="model-section-asr">ASR</button>
+			                <button class="model-nav-btn" type="button" data-target="model-section-env">环境摘要</button>
+			              </aside>
 			              <div class="model-content" id="modelContent">
 			                <section class="model-section" id="model-section-check">
 			                  <div class="model-section-head">
